--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ lerna-debug.log*
 venv/
 
 # 构建输出
-dist
+# dist
 dist-ssr
 *.local
 
@@ -28,7 +28,7 @@ dist-ssr
 
 # 环境变量
 .env
-.env.local
+# .env.local
 .env.development
 .env.test
 .env.production
